--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       referrerpolicy="no-referrer"
     />
     <!-- =========CSS======= -->
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-list webstudio">
@@ -537,11 +538,11 @@
         </div>
         <!-- ========Вікно підписки========-->
         <form class="sign-up">
-          <p class="sign-up-text">Підпишіться на розсилку</p>
+          <p class="sign-up__text">Підпишіться на розсилку</p>
           <label>
-            <input class="sign-ua-input" type="email" name="email" placeholder="E-mail" />
+            <input class="sign-up__input" type="email" name="email" placeholder="E-mail" />
           </label>
-          <button class="sign-up-button" type="submit">
+          <button class="sign-up__button" type="submit">
             Підписатися
             <svg class="send" width="24" height="24">
               <use href="./imeges/icons/symbol-defs.svg#send"></use>
