--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-list portfolio">
@@ -265,7 +266,7 @@
                   />
                   <a href="" target="_blank" rel="noopener noreferrer" aria-label="">
                     <div class="overley">
-                      <p class="overley___text">
+                      <p class="overley__text">
                         Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
                         сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
                         компанію чи приватну особу.
@@ -381,7 +382,7 @@
         <form class="sign-up">
           <p class="sign-up__text">Підпишіться на розсилку</p>
           <label>
-            <input class="sign-ua__input" type="email" name="email" placeholder="E-mail" />
+            <input class="sign-up__input" type="email" name="email" placeholder="E-mail" />
           </label>
           <button class="sign-up__button" type="submit">
             Підписатися
