--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     />
     <!-- =========CSS======= -->
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-list webstudio">
     <!-- Шапка сайту -->
@@ -61,14 +60,14 @@
     </header>
     <!-- Основна частина -->
     <main>
-      <section class="hero section">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-list">Ефективне рішення для вашого бізнесу</h1>
           <button class="button" type="button" data-modal-open>Замовити продукт</button>
         </div>
       </section>
       <!-- Наші переваги -->
-      <section class="benefits section">
+      <section class="benefits">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="list benefits__lists">
@@ -120,7 +119,7 @@
         </div>
       </section>
       <!-- Чим ми займаємося -->
-      <section class="list-meta section">
+      <section class="list-meta">
         <div class="container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="list list-meta__title">
@@ -146,7 +145,7 @@
         </div>
       </section>
       <!--Наша команда  -->
-      <section class="comand section">
+      <section class="comand">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="list comand__title">
@@ -387,7 +386,7 @@
         </div>
       </section>
       <!-- Постійні клієнти -->
-      <section class="section">
+      <section class="clients__list">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
           <ul class="list client-list">
