--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,6 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body-list portfolio">
     <!-- Шапка -->
@@ -67,7 +66,7 @@
 
     <main>
       <!-- Кнопки -->
-      <section class="section">
+      <section class="portfolio__lists">
         <div class="container">
           <h1 class="visually-hidden">Приклади наших проєктів</h1>
           <ul class="list nvg-list">
